Created project, tied to github

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 name = "uniqr"
 version = "0.1.0"
 edition = "2024"
+authors = ["Phil Brass <pbrass@gmail.com>"]
 
 [dependencies]
+clap = { version = "4", features = ["derive"] }
