--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,11 @@ authors = ["Phil Brass <pbrass@gmail.com>"]
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
+anyhow = "1"
+
+[dev-dependencies]
+assert_cmd = "2.0.13"
+predicates = "3.0.4"
+pretty_assertions = "1.4.0"
+tempfile = "3.10.0"
+rand = "0.8.5"
